Fix: fixed the profile image

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <span
                   class="typewriter"
                   data-wait="1000"
-                  data-words='["Software Developer", "Digital Marketer", "Web Designer"]'
+                  data-words='["Frontend Developer","Product Developer", "Digital Marketer" ]'
                 >
                 </span>
               </h1>
@@ -136,31 +136,26 @@
         <div class="about-text">
           <h2>who am i ?</h2>
           <p>
-            I am Duru-young Raymond, A self taught Web Developer, Designer and
-            Digital Marketer. I hold a bachelor's degree in Civil Engineering. I
-            have previously worked in the construction sector, banking sector,
+            I am a frontend web and product developer. An engineering graduate with experiences across various sectors having previously worked in the construction sector, banking sector,
             as well as the e-commerce sector. I am a self-driven, curious
             individual who loves to learn about new and interesting technologies
             so that I can create things for myself and others.
           </p>
           <p>
-            In my spare time I enjoy watching Football, Movie Series and surfing
-            the internet in search of new and exciting things to learn, I
-            occasionally play games like FIFA, Football Manager, FPL, and a few
+            In my spare time I enjoy watching football, movie series and surfing
+            the net in search of new and exciting things to learn, I
+            occasionally play games like FIFA, Football Manager, FPL, and a some
             board games.
           </p>
           <p>
             I like visual stuff and love to keep an eye for a good design when I
             code. But I always strive to ensure a balance between aesthetics and
-            efficiency. Currently my Front end skills includes HTML, CSS,
-            Bootstrap, SaSS, jQuery, JavaScript, React and Redux.
+            efficiency. However, my knowledge is not limited to just frontend web development, I have
+            dabbled a little into Android Development, developed basic apps
+            with Java and I recently picked up learning Node and Laravel.
           </p>
           <p>
-            However, my knowledge is not limited to just Web Development, I have
-            dabbled a little into Android Development, developed basic apps
-            using Java and I recently picked up learning NodeJS and Laravel
-            which I believe are one of the many steps to my quest of becoming a
-            Full Stack Developer.
+            
           </p>
         </div>
         <div class="about-footer">
@@ -215,21 +210,11 @@
                   title="JavaScript"
                 />
                 <img
-                  src="./assets/jquery-1.svg"
-                  alt="jquery icon"
-                  title="jQuery"
-                />
-                <img
                   src="./assets/react-2.svg"
                   alt="react icon"
                   title="React"
                 />
                 <img src="./assets/redux.svg" alt="redux icon" title="Redux" />
-                <img
-                  src="./assets/figma-1.svg"
-                  alt="figma icon"
-                  title="Figma"
-                />
                 <img
                   src="./assets/wordpress-icon.svg"
                   alt="wordpress icon"
