Update: Replaced some icons and tiny updates

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <p>
             In my spare time I enjoy watching football, movie series and surfing
             the net in search of new and exciting things to learn, I
-            occasionally play games like FIFA, Football Manager, FPL, and a some
+            occasionally play games like FIFA, Football Manager, FPL, and some
             board games.
           </p>
           <p>
@@ -215,6 +215,7 @@
                   title="React"
                 />
                 <img src="./assets/redux.svg" alt="redux icon" title="Redux" />
+                <img src="./assets/next.svg" alt="next js icon" title="Next JS" />
                 <img
                   src="./assets/wordpress-icon.svg"
                   alt="wordpress icon"
@@ -229,11 +230,6 @@
               />
               <h1 class="service-work-title">digital marketing</h1>
               <div class="service-work-tools">
-                <img
-                  src="./assets/trello.svg"
-                  alt="trello icon"
-                  title="Trello"
-                />
                 <img
                   src="./assets/mailchimp-freddie-icon-wink.svg"
                   alt="mailchimp icon"
@@ -255,9 +251,9 @@
                   title="Google-ads"
                 />
                 <img
-                  src="./assets/hubspot-1.svg"
-                  alt="hubspot"
-                  title="Hubspot"
+                  src="./assets/mixpanel.svg"
+                  alt="mixpanel icon"
+                  title="Mixpanel"
                 />
                 <img
                   src="./assets/google-marketing-platform.svg"
@@ -269,11 +265,15 @@
                   alt="google-analytics"
                   title="Google-analytics"
                 />
-                <img src="./assets/images.png" alt="yoast" title="Yoast" />
                 <img
                   src="./assets/instagram-2-1.svg"
                   alt="instagram"
                   title="Instagram"
+                />
+                <img
+                  src="./assets/twitter.svg"
+                  alt="twitter icon"
+                  title="Twitter"
                 />
               </div>
             </div>
