Fix: Added alt tags to project images and updated github url

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="sm-links">
               <ul class="sm-list">
                 <li class="sm-list-item">
-                  <a href="https://codepen.io/smartray" target="_blank"
+                  <a href="https://codepen.io/duruyoungcr" target="_blank"
                     ><i class="fa fa-codepen"></i
                   ></a>
                 </li>
@@ -390,12 +390,12 @@
                 >
               </li>
             </ul>
+            <p class="social-heading">follow me</p>
+            <hr />
             <ul class="social-media-list">
-              <p class="social-heading">follow me</p>
-              <hr />
               <li>
                 <a
-                  href="https://github.com/smartray"
+                  href="https://github.com/duruyoungcr"
                   target="_blank"
                   class="contact-icon"
                 >
