Update: Modified Page Title and Footer Title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Porfolio page of Duru-young Raymond Chinonso"
+      content="Porfolio page of Duru-young Raymond Chinonso, A Frontend Developer."
     />
     <meta
       name="keywords"
@@ -27,7 +27,7 @@
     <!-- link favicon in browser tab -->
     <link rel="icon" href="./assets/icon.png" type="image/x-icon" />
 
-    <title>Rayced | Portfolio</title>
+    <title>Duru-young Raymond | Portfolio</title>
   </head>
   <body>
     <div id="fullpage">
@@ -437,7 +437,7 @@
       <div class="go-up"><i class="fa fa-angle-double-up"></i></div>
       <footer class="footer">
         <img src="./assets/logo.png" alt="logo" width="30px" height="30px" />
-        &copy 2020 | rayced.com
+        &copy 2020 | dycr.dev
       </footer>
     </div>
     <!-- link sweet alert -->
