--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- link internal css -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- link favicon in browser tab -->
-    <link rel="icon" href="./assets/icon.png" type="image/x-icon" />
+    <link rel="icon" href="./assets/logo_black.png" type="image/x-icon" />
 
     <title>Duru-young Raymond | Portfolio</title>
   </head>
@@ -37,10 +37,10 @@
           <div class="logo">
             <a href="#"
               ><img
-                src="./assets/logo.png"
+                src="./assets/logo_white.png"
                 alt="logo"
-                width="30px"
-                height="30px"
+                width="65px"
+                height="65px"
             /></a>
           </div>
           <div class="links">
@@ -436,8 +436,8 @@
       <!--end of contact section -->
       <div class="go-up"><i class="fa fa-angle-double-up"></i></div>
       <footer class="footer">
-        <img src="./assets/logo.png" alt="logo" width="30px" height="30px" />
-        &copy 2020 | dycr.dev
+        <img src="./assets/logo_white.png" alt="logo" width="65px" height="65px" />
+        <p>&copy 2020 | dycr.dev</p>
       </footer>
     </div>
     <!-- link sweet alert -->
