--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- link favicon in browser tab -->
     <link rel="icon" href="./assets/logo_black.png" type="image/x-icon" />
-
-    <title>Duru-young Raymond | Portfolio</title>
+    <title>Duru-young Raymond | Frontend Developer</title>
   </head>
   <body>
     <div id="fullpage">
